# extractous-go

./: .gitignore  BENCHMARKS.md  DISTRIBUTION.md  Makefile  README.md  cgo.go  check_native_libs.go  config.go  constants.go  copy.sh  errors.go  extractor.go  extractous.go  extractous.h  go.mod  go.sum  main.go  metadata.go  stream.go  types.go
.github/workflows/: build-debug.yml  build-exp.yml  build.yml  ffi_artifact_test.yml  release.yml
.github/workflows/scripts/: build-local.sh  collect-dependencies.sh  collect-libs.sh  verify-build.sh  verify-distribution.sh
cmd/install/: main.go
core/: Cargo.toml  build.rs
core/src/: config.rs  lib.rs
core/src/tika/: wrappers.rs
examples/: basic.go
examples/basic/: main.go
examples/config/: main.go
examples/streaming/: main.go
extractous-core/: Cargo.toml  README.md  build.rs  rustfmt.toml
extractous-core/benches/: extractor.rs
extractous-core/examples/: extract_to_stream.rs  extract_to_string.rs
extractous-core/src/: errors.rs  extractor.rs
extractous-core/src/tika/: jni_utils.rs  parse.rs
extractous-core/tests/: extract_to_stream_tests.rs  extract_to_string_tests.rs  extract_to_xml_tests.rs  test_utils.rs
extractous-core/tika-native/: build.gradle
extractous-core/tika-native/gradle/wrapper/: gradle-wrapper.properties
extractous-core/tika-native/src/main/java/ai/yobix/: ByteBufferInputStream.java  ParsingReader.java  ReaderResult.java  StringResult.java  (+1 more)
extractous-ffi/: Cargo.toml  build.rs
extractous-ffi/src/: config.rs  errors.rs  extractor.rs  lib.rs  metadata.rs  stream.rs  types.rs
ffi/: Cargo.toml  build.rs  cbindgen.toml
ffi/examples/: README.md  basic_extraction.c  pdf_with_ocr.c  streaming_extraction.c
ffi/include/: extractous.h
ffi/src/: config.rs  errors.rs  extractor.rs  lib.rs  metadata.rs  stream.rs  types.rs
include/: extractous.h
scripts/: build.sh  build_all_platforms.sh  build_ffi.sh  build_ffi_all.sh  check_env.sh  copy_libs.sh  detect_platform.sh  extract_wheels.sh  extract_wheels_all_platform.sh  setup_toolchains.sh  test_ffi.sh
src/: cgo.go  config.go  errors.go  extractor.go  metadata.go  stream.go
tests/: README.md
tests/extractor_test/: extractor_test.go
tests/ffi/: Makefile  test_ffi_interface  test_ffi_interface.c
tests/go/: bindings_test.go  integration_test.go
tests/smoke/: Makefile  smoke  smoke.c
