[package]
name = "extractous-ffi"
version = "0.1.2"
edition = "2021"
authors = ["Rahul"]
description = "C FFI bindings for extractous document extraction library"
license = "Apache-2.0"
repository = "https://github.com/rahulpoonia229/extractous-go"
publish = false

[lib]
name = "extractous_ffi"
crate-type = ["cdylib"]

[dependencies]
extractous = "0.3.0"
libc = "0.2"

[build-dependencies]
cbindgen = "0.29"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = false
panic = "abort"

[profile.dev]
opt-level = 0
